--- a/index.html
+++ b/index.html
@@ -4,15 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheets" type="text/css" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Psychic-Game</title>
 </head>
 <body>
- 
+<!-- Nav Bar -->
+<nav class="navbar navbar-light bg-light">
+    <span class="navbar-brand mb-0 h1"><h1>Psychic-Game</h1></span>
+</nav>
+
 <div id="game">
 
-<h1>Psychic-Game</h1>
 <h2>Guess what letter I'm thinking of...</h2>
+<h2>Press any letter to begin.</h2>
+<h2>Good Luck!</h2>
 
 </div>
 
